Update .gitignore and zsh aliases

--- a/.stow-local-ignore
+++ b/.stow-local-ignore
@@ -1,6 +1,13 @@
-\.git
-\.gitignore
-
-^/LICENSE.*
-
 .DS_Store
+.git
+.gitignore
+.gitmodules
+.stow-local-ignore
+.*.example
+^/@.*
+KeybdPrefs_.*.png
+Safari_.*.png
+README.*
+TODO.*
+RCS
+.*.secrets.*
