--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -10,3 +10,10 @@
 	rebase = false
 [init]
 	defaultBranch = main
+[alias]
+    l = log --pretty=oneline --graph
+    s = status -s
+    branches = branch -a
+    amend = commit --amend --no-edit
+    branchname = "!f() { git rev-parse --abbrev-ref HEAD; }; f"
+    publish = "!f() { git push origin --set-upstream $(git branchname); }; f"
