--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "zsh/.config/zsh/ohmyzsh"]
 	path = zsh/.config/zsh/ohmyzsh
 	url = https://github.com/ohmyzsh/ohmyzsh.git
+[submodule "zsh/.config/zsh/custom/zsh-syntax-highlighting"]
+	path = zsh/.config/zsh/custom/plugins/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
