--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -15,5 +15,13 @@
     s = status -s
     branches = branch -a
     amend = commit --amend --no-edit
+    ca = "!f() { git commit -m $1 -a; }; f"
     branchname = "!f() { git rev-parse --abbrev-ref HEAD; }; f"
     publish = "!f() { git push origin --set-upstream $(git branchname); }; f"
+[diff]
+    tool = kdiff3
+[difftool]
+    prompt = false
+[merge]
+    tool = kdiff3
+    conflictstyle = diff3
