--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -22,7 +22,7 @@
     br = branch --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(contents:subject) %(color:green)(%(committerdate:relative)) [%(authorname)]' --sort=-committerdate
     d = branch -D
     cob = checkout -b
-    delete-tag-with-pattern = "!f() { git tag -d $(git tag -l \"$1*\") && git push -d origin $(git tag -l \"$1*\"); }; f"
+    delete-tag-with-pattern = "!f() { git push -d origin $(git tag -l \"$1*\") && git tag -d $(git tag -l \"$1*\"); }; f"
 [diff]
     tool = kdiff3
 [difftool]
