--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,11 +1,6 @@
 [user]
 	name = Max Tayler
 	email = maxtayler1@gmail.com
-	signingkey = 693E12A2860C0272
-[gpg]
-	program = gpg
-[commit]
-	gpgsign = true
 [pull]
 	rebase = false
 [init]
@@ -22,4 +17,4 @@
     echo-branches = for-each-ref --format='%(refname:short) ' refs/heads/
     co = checkout
 [core]
-    excludesfile = ~/.gitignore_global
+	excludesfile = /Users/MaxTayler/.gitignore_global
